--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -23,3 +23,20 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+/* my solution */
+
+.header{
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul{
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  padding: 0px;
+  margin: 0px;
+}
