--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,25 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* my changes */
+
+.header{
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+}
+
+.left, .right{
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.left ul{
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+
+}
