--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,3 +24,31 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+/* my changes */
+
+body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body .title{
+  margin-bottom: 32px;
+}
+
+.content{
+  display: flex;
+  flex-direction: row;
+  gap: 52px;
+}
+
+.item{
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 32px;
+  text-align: center;
+}
