--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -46,3 +46,22 @@ html {
   color: white;
   text-align: left;
 }
+
+.container{
+  display: grid;
+  grid-template-columns: 24% 75%;
+  grid-row: 25% 25% 25% 25%;
+  grid-gap: 15px;
+}
+
+.header{
+  grid-column: 1/3;
+}
+
+.sidebar{
+  grid-row: 2/4;
+}
+
+.footer{
+  grid-column: 1/3;
+}
