--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -49,3 +49,22 @@ html {
   background-color: #393f4d;
   grid-column: 1 / 3;
 }
+
+.container{
+  display: grid;
+  grid-template-columns: 24% 75%;
+  grid-row: 25% 25% 25% 25%;
+  grid-gap: 15px;
+}
+
+.header{
+  grid-column: 1/3;
+}
+
+.sidebar{
+  grid-row: 2/4;
+}
+
+.footer{
+  grid-column: 1/3;
+}
